# MEDCHAIN

./: .replit  README.md  audio_utils.py  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted-import-streamlit-as-st-import-pandas-as-pd-import-plotly-express-as-px-import-plotly-graph-objects-a-1740675636664.txt  Pasted-import-streamlit-as-st-import-pandas-as-pd-import-plotly-express-as-px-import-plotly-graph-objects-a-1740682034202.txt
data/: hospitals.csv  medical.csv  patients.csv
