[project]
name = "repl-nix-workspace"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
"google-generativeai",
"groq",
"mistralai",
"numpy",
"openai",
"pandas",
"pillow",
"plotly",
"sounddevice",
"streamlit",
"twilio",
"wavio",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
